# vanilla-llama

./: README.md  convert.py  example.py  inference.py  pyproject.toml  requirements.txt  server.py
llama/: generation.py  model.py  model2.py
