[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "ipython>=8.13.2",
]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Marius Cobzarenco", email = "marius.cobzarenco@uipath.com"},
]
dependencies = [
    "accelerate",
    "sentencepiece",
    "torch",
    "tqdm",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
